<resources>
  <string name="app_name">消費税10%</string>
  <string name="btn_0">0</string>
  <string name="btn_1">1</string>
  <string name="btn_2">2</string>
  <string name="btn_3">3</string>
  <string name="btn_4">4</string>
  <string name="btn_5">5</string>
  <string name="btn_6">6</string>
  <string name="btn_7">7</string>
  <string name="btn_8">8</string>
  <string name="btn_9">9</string>
  <string name="btn_DEL">DEL</string>
  <string name="btn_CLR">CLR</string>
  <string name="btn_OFF">%OFF</string>
  <string name="off">%</string>
  <string name="off_message">計算結果から値引きします</string>
  <string name="OK">OK</string>
  <string name="Cancel">Cancel</string>
  <string name="btn_equal">=</string>
  <string name="btn_minus">−</string>
  <string name="btn_plus">+</string>
  <string name="btn_times">×</string>
  <string name="btn_divided">÷</string>
  <string name="taxIncluded">税込:</string>
  <string name="taxExcluded">税抜:</string>
</resources>