<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

  <LinearLayout
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical">

      <com.google.android.gms.ads.AdView
          xmlns:ads="http://schemas.android.com/apk/res-auto"
          android:id="@+id/adView"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          ads:adSize="BANNER"
          ads:adUnitId="ca-app-pub-8221838827607460/6202866643"/>

      <TextView
          android:id="@+id/taxExcluded"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_gravity="end"
          android:layout_marginEnd="10dp"
          android:layout_marginRight="10dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/taxExcluded"
          android:textAlignment="textEnd"
          android:textSize="30sp"
          tools:ignore="RtlCompat"/>

      <TextView
          android:id="@+id/formula"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_marginRight="10dp"
          android:layout_weight="1"
          android:gravity="bottom|right"
          android:textAllCaps="false"
          android:textColor="@android:color/background_dark"
          android:textSize="40sp"
          tools:ignore="RtlHardcoded"/>

      <TextView
          android:id="@+id/taxIncluded"
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_gravity="end"
          android:layout_marginEnd="10dp"
          android:layout_marginRight="10dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/taxIncluded"
          android:textAlignment="textEnd"
          android:textSize="30sp"
          tools:ignore="RtlCompat"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_google_signin_btn_text_dark_focused"
        android:gravity="center"
        android:orientation="horizontal">

      <TableLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

          <Button
              android:id="@+id/btn_7"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_7"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_8"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_8"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_9"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_9"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

          <Button
              android:id="@+id/btn_4"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_4"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_5"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_5"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_6"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_6"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

          <Button
              android:id="@+id/btn_1"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_1"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_2"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_2"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_3"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_3"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.2">

          <Button
              android:id="@+id/btn_OFF"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_OFF"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="20sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_0"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_0"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

          <Button
              android:id="@+id/btn_equal"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1"
              android:background="@color/common_google_signin_btn_text_dark_focused"
              android:text="@string/btn_equal"
              android:textColor="@color/common_google_signin_btn_text_dark_default"
              android:textSize="30sp"
              tools:ignore="ButtonStyle"/>

        </TableRow>

      </TableLayout>

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <Button
            android:id="@+id/btn_DEL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/btn_DEL"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_divided"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/btn_divided"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_times"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/btn_times"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_minus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/btn_minus"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:text="@string/btn_plus"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"/>

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>